# python_cli_skeleton

./: LICENSE  README.md  pyproject.toml
skeleton/: __init__.py
src/skeleton/: __main__.py
tests/: test_greetings.py
